Fixed the formatting issue for Study Hours Timeline, overlapping issue for columns, margin issues on forms, queries now work, data manager can now see studies.

--- a/app/views/manager_hours/edit.html.haml
+++ b/app/views/manager_hours/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Editing manager_hour
+.grouping
+  %h1 Editing manager_hour
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Show', @manager_hour
-\|
-= link_to 'Back', manager_hours_path
+  = link_to 'Show', @manager_hour
+  \|
+  = link_to 'Back', manager_hours_path
