--- a/app/views/manager_hours/new.html.haml
+++ b/app/views/manager_hours/new.html.haml
@@ -1,5 +1,6 @@
-%h1 New manager_hour
+.grouping
+  %h1 New manager_hour
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Back', manager_hours_path
+  = link_to 'Back', manager_hours_path
