--- a/app/views/manager_hours/show.html.haml
+++ b/app/views/manager_hours/show.html.haml
@@ -1,6 +1,7 @@
-%p#notice= notice
+.grouping
+  %p#notice= notice
 
 
-= link_to 'Edit', edit_manager_hour_path(@manager_hour)
-\|
-= link_to 'Back', manager_hours_path
+  = link_to 'Edit', edit_manager_hour_path(@manager_hour)
+  \|
+  = link_to 'Back', manager_hours_path
