--- a/app/views/studies/edit.html.haml
+++ b/app/views/studies/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Editing study
+.grouping
+  %h1 Editing study
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Show', @study
-\|
-= link_to 'Back', studies_path
+  = link_to 'Show', @study
+  \|
+  = link_to 'Back', studies_path
