--- a/app/views/studies/new.html.haml
+++ b/app/views/studies/new.html.haml
@@ -1,5 +1,6 @@
-%h1 New study
+.grouping
+  %h1 New study
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Back', studies_path
+  = link_to 'Back', studies_path
