--- a/app/views/study_tasks/guest.html.haml
+++ b/app/views/study_tasks/guest.html.haml
@@ -1,5 +1,6 @@
-%h1 Form to add hours as a guest to a study
+.grouping
+  %h1 Form to add hours as a guest to a study
 
-= render 'guest_hours'
+  = render 'guest_hours'
 
-= link_to 'Back', study_tasks_path
+  = link_to 'Back', study_tasks_path
