--- a/app/views/studies/dm_studies.haml
+++ b/app/views/studies/dm_studies.haml
@@ -15,31 +15,31 @@
           %th.col-1 Notes
           %th.col-1 Recruitment Start
           %th.col-1 LPLV
-          %th.col-1 Freeze -# 1 month after LPLV
-          %th.col-1 Lock -# 2 months after LPLV
+          %th.col-1 Freeze
+          %th.col-1 Lock
           %th.col-1 Complete
           %th.col-1
           %th.col-1
           %th.col-1
 
-  %tbody
-    - @studies.each do |study|
-      %tr.d-flex
-        %td.col-1= study.id
-        %td.col-1= study.study_name
-        %td.col-1= study.stage
-        %td.col-1= study.type_of
-        %td.col-1= study.lead_manager
-        %td.col-1= study.backup_manager
-        %td.col-1= study.notes
-        %td.col-1= study.start_date.strftime('%d/%m/%Y')
-        %td.col-1= study.lplv.strftime('%d/%m/%Y')
-        %td.col-1= study.lplv.to_time.advance(:months => 1).to_date.strftime('%d/%m/%Y')
-        %td.col-1= study.lplv.to_time.advance(:months => 2).to_date.strftime('%d/%m/%Y')
-        %td.col-1= study.study_finished
-        %td.col-1= link_to 'Show', study
-        %td.col-1= link_to 'Edit', edit_study_path(study)
-        %td.col-1= link_to 'Tasks', get_tasks_path(study.study_id)
+      %tbody
+        - @studies.each do |study|
+          %tr.d-flex
+            %td.col-1= study.id
+            %td.col-1= study.study_name
+            %td.col-1= study.stage
+            %td.col-1= study.type_of
+            %td.col-1= study.lead_manager
+            %td.col-1= study.backup_manager
+            %td.col-1= study.notes
+            %td.col-1= study.start_date.strftime('%d/%m/%Y')
+            %td.col-1= study.lplv.strftime('%d/%m/%Y')
+            %td.col-1= study.lplv.to_time.advance(:months => 1).to_date.strftime('%d/%m/%Y')
+            %td.col-1= study.lplv.to_time.advance(:months => 2).to_date.strftime('%d/%m/%Y')
+            %td.col-1= study.study_finished
+            %td.col-1= link_to 'Show', study
+            %td.col-1= link_to 'Edit', edit_study_path(study)
+            %td.col-1= link_to 'Tasks', get_tasks_path(study.study_id)
   %br
 
   %br
