--- a/app/views/studies/index_tasks.html.haml
+++ b/app/views/studies/index_tasks.html.haml
@@ -1,34 +1,34 @@
-%h1 Listing specific study_tasks
+.grouping
+  %h1 Listing specific study_tasks
 
-%table
-  %thead
-    %tr
-      %th ID
-      %th Name
-      %th Study
-      %th Lead DM Hours
-      %th Backup DM Hours
-      %th Year
-      %th Month
-      %th Complete
-      %th
-      %th
-      %th
-
-  %tbody
-    - @study_tasks.each do |study_task|
-      %tr
-        %td= study_task.task_id
-        %td= study_task.task_name
-        %td= study_task.study_id
-        %td= study_task.lead_hours_worked
-        %td= study_task.backup_hours_worked
-        %td= study_task.year
-        %td= study_task.month
-        %td= study_task.complete
-        %td= link_to 'Show', study_task
-        %td= link_to 'Manage Hours', edit_study_task_path(study_task)
-        -#%td= link_to 'Hours', hours_management_path(study_task)
+  .scrollable
+    %table.table.table-bordered
+      %thead
+        %tr
+          %th ID
+          %th Name
+          %th Study
+          %th Lead DM Hours
+          %th Backup DM Hours
+          %th Year
+          %th Month
+          %th Complete
 
 
-%br
+      %tbody
+        - @study_tasks.each do |study_task|
+          %tr
+            %td= study_task.task_id
+            %td= study_task.task_name
+            %td= study_task.study_id
+            %td= study_task.lead_hours_worked
+            %td= study_task.backup_hours_worked
+            %td= study_task.year
+            %td= study_task.month
+            %td= study_task.complete
+            %td= link_to 'Show', study_task
+            %td= link_to 'Manage Hours', edit_study_task_path(study_task)
+            -#%td= link_to 'Hours', hours_management_path(study_task)
+
+
+  %br
