--- a/app/views/study_tasks/edit.html.haml
+++ b/app/views/study_tasks/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Editing study_task
+.grouping
+  %h1 Editing study_task
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Show', @study_task
-\|
-= link_to 'Back', study_tasks_path
+  = link_to 'Show', @study_task
+  \|
+  = link_to 'Back', study_tasks_path
