--- a/app/views/study_tasks/new.html.haml
+++ b/app/views/study_tasks/new.html.haml
@@ -1,5 +1,6 @@
-%h1 New study_task
+.grouping
+  %h1 New study_task
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Back', study_tasks_path
+  = link_to 'Back', study_tasks_path
