--- a/app/views/task_lists/edit.html.haml
+++ b/app/views/task_lists/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Editing task_list
+.grouping
+  %h1 Editing task_list
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Show', @task_list
-\|
-= link_to 'Back', task_lists_path
+  = link_to 'Show', @task_list
+  \|
+  = link_to 'Back', task_lists_path
