--- a/app/views/task_lists/new.html.haml
+++ b/app/views/task_lists/new.html.haml
@@ -1,5 +1,6 @@
-%h1 New task_list
+.grouping
+  %h1 New task_list
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Back', task_lists_path
+  = link_to 'Back', task_lists_path
