--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Editing User
+.grouping
+  %h1 Editing User
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Show', @user
-\|
-= link_to 'Back', users_path
+  = link_to 'Show', @user
+  \|
+  = link_to 'Back', users_path
