--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,22 +1,23 @@
-%p#notice= notice
+.grouping
+  %p#notice= notice
 
 
-%p
-  %b Id:
-  = @user.id
-%p
-  %b Email:
-  = @user.email
-%p
-  %b Username:
-  = @user.username
-%p
-  %b Admin:
-  = @user.admin
+  %p
+    %b Id:
+    = @user.id
+  %p
+    %b Email:
+    = @user.email
+  %p
+    %b Username:
+    = @user.username
+  %p
+    %b Admin:
+    = @user.admin
 
 
 
-\|
-= link_to 'Edit', edit_user_path(@user)
-\|
-= link_to 'Back', users_path
+  \|
+  = link_to 'Edit', edit_user_path(@user)
+  \|
+  = link_to 'Back', users_path
