--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -4,44 +4,44 @@
   .jumbotron.mb-3
     %h1.display-5 Time and Resourcing Data Information System
     %p.lead Made by Team 4.
-    %p
-      View Study List
-      = link_to 'Click', 'studies'
-    %p
-      View Lead & Backup DM Hours Per Month
-      = link_to 'Click', 'study_hours_timeline'
-      for icons.
-      %p
-      View Available Tasks & Details
-      = link_to 'Click', 'task_lists'
-      for icons.
-      %p
-      View Month Timeline For All Studies
-      = link_to 'Click', 'month_timeline'
-      for icons.
-      %p
-      Manage All Data Managers
-      = link_to 'Click', 'data_managers'
-      for icons.
-      %p
-      View Data Manager Working Hours
-      = link_to 'Click', 'manager_hours'
-      for icons.
+    -#%p
+      -#View Study List
+      -#= link_to 'Click', 'studies'
+    -#%p
+      -#View Lead & Backup DM Hours Per Month
+      -#= link_to 'Click', 'study_hours_timeline'
+      -#for icons.
+      -#%p
+      -#View Available Tasks & Details
+      -#= link_to 'Click', 'task_lists'
+      -#for icons.
+      -#%p
+      -#View Month Timeline For All Studies
+      -#= link_to 'Click', 'month_timeline'
+      -#for icons.
+      -#%p
+      -#Manage All Data Managers
+      -#= link_to 'Click', 'data_managers'
+      -#for icons.
+      -#%p
+      -#View Data Manager Working Hours
+      -#= link_to 'Click', 'manager_hours'
+      -#for icons.
 - else
   .jumbotron.mb-3
     %h1.display-5 Time and Resourcing Data Information System
     %p.lead Made by Team 4.
-    %p
-      As an Admin : Getting Study List
-      = link_to 'Click', 'studies'
-    %p
-      As a DM : Getting Study List
-      = link_to 'Click', 'dm_studies'
-      for icons.
-    %p
-      As a DM : Getting own hours
-      = link_to 'Click', 'dm_hours'
-      for icons.
+    -#%p
+      -#As an Admin : Getting Study List
+      -#= link_to 'Click', 'studies'
+    -#%p
+      -#As a DM : Getting Study List
+      -#= link_to 'Click', 'dm_studies'
+      -#for icons.
+    -#%p
+      -#As a DM : Getting own hours
+      -#= link_to 'Click', 'dm_hours'
+      -#for icons.
 
 -#.card.mb-3
 -#  .card-header
