Formatted buttons on all pages, background colour changed and table rows are hoverable

--- a/app/assets/stylesheets/environment_notice.scss
+++ b/app/assets/stylesheets/environment_notice.scss
@@ -19,3 +19,7 @@ body.has-environment-notice {
     top: $environment-notice-height;
   }
 }
+
+.background-colour {
+  background-color: #efedf0;
+}
