--- a/app/views/studies/dm_studies.haml
+++ b/app/views/studies/dm_studies.haml
@@ -3,7 +3,7 @@
   %h1 All Study Timelines
 
   .scrollable
-    %table.table.table-bordered
+    %table.table.table-bordered.table-hover
       %thead
         %tr
           %th ID
