--- a/app/views/studies/month_timeline.html.haml
+++ b/app/views/studies/month_timeline.html.haml
@@ -3,7 +3,7 @@
   %h1 Projected tasks for studies
 
   .scrollable
-    %table.table.table-bordered
+    %table.table.table-bordered.table-hover
       %thead
         %tr
           %th Study Name
