--- a/app/views/studies/study_hours_timeline.html.haml
+++ b/app/views/studies/study_hours_timeline.html.haml
@@ -3,7 +3,7 @@
   %h1 Study Hours Timeline
 
   .scrollable
-    %table.table.table-bordered
+    %table.table.table-bordered.table-hover
       %thead
         %tr
           %th ID
