--- a/app/views/study_tasks/_form.html.haml
+++ b/app/views/study_tasks/_form.html.haml
@@ -18,4 +18,4 @@
       = f.input :guest_hours_worked
 
     .form-actions
-      = f.button :submit
+      = f.button :submit, class: "btn btn-outline-dark"
