--- a/app/views/study_tasks/guest.html.haml
+++ b/app/views/study_tasks/guest.html.haml
@@ -3,4 +3,4 @@
 
   = render 'guest_hours'
 
-  = link_to 'Back', study_tasks_path
+  = link_to 'Back', study_tasks_path, class: "btn btn-outline-dark"
