--- a/app/views/study_tasks/index.html.haml
+++ b/app/views/study_tasks/index.html.haml
@@ -1,7 +1,7 @@
 .grouping
   %h1 Tasks Allocated to a Study
   .scrollable
-    %table.table.table-bordered
+    %table.table.table-bordered.table-hover
       %thead
         %tr
           %th ID
