--- a/app/views/study_tasks/new.html.haml
+++ b/app/views/study_tasks/new.html.haml
@@ -1,6 +1,6 @@
 .grouping
-  %h1 New study_task
+  %h1 Add study_task
 
   = render 'form'
-
-  = link_to 'Back', study_tasks_path
+  %br
+  = link_to 'Back', study_tasks_path, class: "btn btn-outline-dark"
