--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -21,9 +21,9 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Change my password" %>
+      <%= f.button :submit, "Change my password", class: 'btn btn-outline-dark' %>
     </div>
   <% end %>
 
   <%= render "devise/shared/links" %>
-</div>    
+</div>
