--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
     = favicon_link_tag '/favicon.ico'
     = csrf_meta_tags
 
-  %body{ class: environment_notice_body_class }
+  %body.background-colour{ class: environment_notice_body_class }
     = render 'layouts/environment_notice'
     .flash-messages
       - flash.each do |name, msg|
@@ -101,7 +101,7 @@
       %main
         #main-container
           = yield
-
+    %br
     %footer#footer
       .container
         %p
