--- a/app/views/manager_hours/index.html.haml
+++ b/app/views/manager_hours/index.html.haml
@@ -2,7 +2,7 @@
   %h1 Data Manager Working Hours
 
   %h2 Listing Available Hours
-  %table.table.table-bordered
+  %table.table.table-bordered.table-hover
     %thead
       %tr
         %th Data Manager
@@ -38,7 +38,7 @@
   %br
 
   %h2 Listing Allocated Hours
-  %table.table.table-bordered
+  %table.table.table-bordered.table-hover
     %thead
       %tr
         %th Data Manager
@@ -75,7 +75,7 @@
   %br
 
   %h2 Listing Spare Hours
-  %table.table.table-bordered
+  %table.table.table-bordered.table-hover
     %thead
       %tr
         %th Data Manager
@@ -112,7 +112,7 @@
   %br
 
   %h2 Listing Holiday Hours
-  %table.table.table-bordered
+  %table.table.table-bordered.table-hover
     %thead
       %tr
         %th Data Manager
@@ -148,4 +148,4 @@
 
   %br
 
-  = link_to 'New Manager hour', new_manager_hour_path
+  = link_to 'New Manager hour', new_manager_hour_path, class: "btn btn-outline-dark"
