--- a/app/views/manager_hours/new.html.haml
+++ b/app/views/manager_hours/new.html.haml
@@ -3,4 +3,6 @@
 
   = render 'form'
 
-  = link_to 'Back', manager_hours_path
+  %br
+  
+  = link_to 'Back', manager_hours_path, class: "btn btn-outline-dark"
