--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -3,7 +3,7 @@
   %h1 List of Available Tasks & Details
 
   .scrollable
-    %table.table.table-bordered
+    %table.table.table-bordered.table-hover
       %thead
         %tr
           %th Task Name
@@ -20,16 +20,16 @@
           %tr
             %td=task_list.task_name
             %td=task_list.predicted_hours
-            -#%td=StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).inject(:+).to_f / StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).length
-            -#%td=StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).max
-            -#%td=StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).min
+            %td=StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).inject(:+).to_f / StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).length
+            %td=StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).max
+            %td=StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).min
             %td=link_to 'Show', task_list
             %td=link_to 'Edit', edit_task_list_path(task_list)
             %td=link_to 'Destroy', task_list, method: :delete, data: { confirm: 'Are you sure?' }
 
   %br
 
-  = link_to 'New Task list', new_task_list_path
+  = link_to 'New Task list', new_task_list_path, class: "btn btn-outline-dark"
 
 
 -#no guest_hours_worked field in the task_list table - causing errors
