--- a/app/views/task_lists/new.html.haml
+++ b/app/views/task_lists/new.html.haml
@@ -3,4 +3,6 @@
 
   = render 'form'
 
-  = link_to 'Back', task_lists_path
+  %br
+
+  = link_to 'Back', task_lists_path, class: "btn btn-outline-dark"
