--- a/app/views/manager_hours/index.html.haml
+++ b/app/views/manager_hours/index.html.haml
@@ -149,3 +149,5 @@
   %br
 
   = link_to 'New Manager hour', new_manager_hour_path, class: "btn btn-outline-dark"
+  = link_to 'New Manager hour', new_manager_hour_path
+  = link_to 'Edit', edite_mh_path
