Update app/views/studies/month_timeline.html.haml, app/views/studies/index_tasks.html.haml, app/views/studies/hours_management.html.haml files

--- a/app/views/studies/index_tasks.html.haml
+++ b/app/views/studies/index_tasks.html.haml
@@ -1,5 +1,5 @@
 .grouping
-  %h1 Listing specific study_tasks
+  %h1 Listing Specific Tasks Assigned to Studies
 
   .scrollable
     %table.table.table-bordered.table-hover
