--- a/app/views/studies/month_timeline.html.haml
+++ b/app/views/studies/month_timeline.html.haml
@@ -1,6 +1,6 @@
 .grouping
 
-  %h1 Projected tasks for studies
+  %h1 Projected Task Timeline for Studies
 
   .scrollable
     %table.table.table-bordered.table-hover
