--- a/app/views/users/data_managers.html.haml
+++ b/app/views/users/data_managers.html.haml
@@ -17,4 +17,4 @@
             %td= user.admin
   %br
 
-  = link_to 'New User', new_user_path, class: "btn btn-outline-dark"
+  -#= link_to 'New User', new_user_path, class: "btn btn-outline-dark"
