--- a/app/views/manager_hours/index.html.haml
+++ b/app/views/manager_hours/index.html.haml
@@ -148,6 +148,7 @@
 
   %br
 
+- if current_user.admin
   = link_to 'New Manager hour', new_manager_hour_path, class: "btn btn-outline-dark"
-  = link_to 'New Manager hour', new_manager_hour_path
-  = link_to 'Edit', edite_mh_path
+- else
+  = link_to 'New Manager hour', new_manager_hour_path, class: "btn btn-outline-dark"
