--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,10 +1,9 @@
 -# frozen_string_literal: true
-= simple_form_for(@user, url: new_user_path) do |f|
+= simple_form_for(@user, url: registration_path, html: { method: :put }) do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
   .form-inputs
-    = f.input :id
     = f.input :email
     = f.input :username
     = f.input :password
@@ -13,3 +12,5 @@
 
   .form-actions
     = f.button :submit, class: "btn btn-outline-dark"
+
+
