--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -78,7 +78,7 @@
 
                     = navbar_link_to 'dm_hours', title: "Getting own hours", identifier: :dm_hours_lists do
                       = icon 'fas', 'dm_hours_lists'
-                      Hours Worked
+                      Manage Hours
 
 
 
