--- a/app/views/manager_hours/new.html.haml
+++ b/app/views/manager_hours/new.html.haml
@@ -1,14 +1,7 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-.grouping
-  %h1 Assign Manager Hours
-=======
-=======
->>>>>>> Fixed group meeting reported issues
 - if current_user.admin
 
   .grouping
-    %h1 New manager_hour
+    %h1 Assign Manager Hours
 
     = render 'form2'
 
@@ -18,8 +11,7 @@
 
 - else
   .grouping
-  %h1 New manager_hour
->>>>>>> Fixed group meeting reported issues
+  %h1 Manage Hours Page
 
   = render 'form'
 
