--- a/app/views/studies/study_hours_timeline.html.haml
+++ b/app/views/studies/study_hours_timeline.html.haml
@@ -59,29 +59,29 @@
             %td= study.study_name
             %td= study.lead_manager
             %td= study.backup_manager
-            %td= StudyTask.where(study_id: study.study_id, month: 1).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 1).sum(:backup_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 2).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 2).sum(:backup_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 3).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 3).sum(:backup_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 4).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 4).sum(:backup_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 5).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 5).sum(:backup_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 6).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 6).sum(:backup_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 7).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 7).sum(:backup_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 8).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 8).sum(:backup_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 9).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 9).sum(:backup_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 10).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 10).sum(:backup_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 11).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 11).sum(:backup_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 12).sum(:lead_hours_worked)
-            %td= StudyTask.where(study_id: study.study_id, month: 12).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 1, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 1, year: 2020).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 2, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 2, year: 2020).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 3, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 3, year: 2020).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 4, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 4, year: 2020).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 5, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 5, year: 2020).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 6, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 6, year: 2020).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 7, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 7, year: 2020).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 8, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 8, year: 2020).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 9, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 9, year: 2020).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 10, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 10, year: 2020).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 11, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 11, year: 2020).sum(:backup_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 12, year: 2020).sum(:lead_hours_worked)
+            %td= StudyTask.where(study_id: study.study_id, month: 12, year: 2020).sum(:backup_hours_worked)
 
   %br
