--- a/app/views/studies/index_tasks.html.haml
+++ b/app/views/studies/index_tasks.html.haml
@@ -10,6 +10,7 @@
           %th Study
           %th Lead DM Hours
           %th Backup DM Hours
+          %th Guest DM Hours
           %th Year
           %th Month
           %th Complete
@@ -23,10 +24,10 @@
             %td= study_task.study_id
             %td= study_task.lead_hours_worked
             %td= study_task.backup_hours_worked
+            %td= study_task.guest_hours_worked
             %td= study_task.year
             %td= study_task.month
             %td= study_task.complete
-            %td= link_to 'Show', study_task
             %td= link_to 'Manage Hours', edit_study_task_path(study_task)
             -#%td= link_to 'Hours', hours_management_path(study_task)
 
