--- a/app/views/manager_hours/index_2026.html.haml
+++ b/app/views/manager_hours/index_2026.html.haml
@@ -1,5 +1,5 @@
 .grouping
-  %h1 Data Manager Working Hours
+  %h1 Data Manager Working Hours 2026
 
   %h2 Listing Available Hours
   %table.table.table-bordered.table-hover
