--- a/app/views/manager_hours/dm_hours_2021.html.haml
+++ b/app/views/manager_hours/dm_hours_2021.html.haml
@@ -1,5 +1,5 @@
 .grouping
-  %h1 Data Manager Working Hours
+  %h1 Data Manager Working Hours 2021
 
 
 
@@ -152,4 +152,3 @@
   %br
 
   = link_to 'New Manager hour', new_manager_hour_path, class: "btn btn-outline-dark"
-
