--- a/app/views/manager_hours/index.html.haml
+++ b/app/views/manager_hours/index.html.haml
@@ -1,5 +1,6 @@
+-# Admin Years
 .grouping
-  %h1 Data Manager Working Hours
+  %h1 Data Manager Working Hours 2020
 
   %h2 Listing Available Hours
   %table.table.table-bordered.table-hover
