--- a/app/views/studies/month_timeline_2025.html.haml
+++ b/app/views/studies/month_timeline_2025.html.haml
@@ -1,6 +1,6 @@
 .grouping
 
-  %h1 Projected Task Timeline for Studies
+  %h1 Projected Task Timeline for Studies 2025
 
   .scrollable
     %table.table.table-bordered.table-hover
