--- a/app/views/studies/study_hours_timeline_2028.html.haml
+++ b/app/views/studies/study_hours_timeline_2028.html.haml
@@ -1,6 +1,6 @@
 .grouping
 
-  %h1 Study Hours Timeline
+  %h1 Study Hours Timeline 2028
 
   .scrollable
     %table.table.table-bordered.table-hover
